# ChatGPT-in-Slack

./: .env.example  .env.sample  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  README.md  app.py  app_prod.py  docker-compose.yml  iam_role.json  install.sh  internals.py  internals_test.py  main.py  main_prod.py  manifest-dev.yml  manifest-prod.yml  pyproject.toml  requirements-dev.txt  requirements.txt  serverless.yml  start_lambda.sh  start_local.sh  validate.sh
.aws/: task-definition.json
.github/workflows/: build_and_deploy_dev.yml  build_and_deploy_prod.yml  deploy_bot.yml  flake8.yml  main.yml  on_demand_chatgpt_bot.yml  pytype.yml  tests.yml
app/: bolt_listeners.py  env.py  home_tab.py  i18n.py  image_ops.py  markdown.py  markdown_conversion.py  openai_api_utils.py  openai_constants.py  openai_image_ops.py  openai_ops.py  reply.py  slack_constants.py  slack_ops.py  slack_ui.py  utils.py  wip_message.py
scripts/: poll_and_respond.js
terraform/: README.md  ecr.tf  ecs.tf  iam.tf  locals.tf  output.tf  provider.tf  terraform.tfvars  variables.tf  vpc.tf
tests/: bolt_listeners_test.py  encode_image_test.py  function_call_example.py  i18n_test.py  image_opts_test.py  markdown_conversion_test.py  markdown_test.py  model_constants_test.py  openai_api_utils_test.py  openai_image_ops_test.py  openai_ops_test.py  slack_ops_test.py  slack_ui_test.py
